Fix : grid-gap to 5px

--- a/HotWax_2021/Code Files/CustomGrid.css
+++ b/HotWax_2021/Code Files/CustomGrid.css
@@ -11,7 +11,7 @@
 
 .widget-type-cell > .row-fluid-wrapper > .row-fluid {
     --grid-display: grid;
-    --grid-gap: 25px;
+    --grid-gap: 5px;
     
     display: var(--grid-display) !important;
     grid-template-columns: repeat(12,minmax(0,1fr));
